force-app/main/default/objects/Customer_Relationship__c/Customer_Relationship__c.object-meta.xml
<CustomObject>
    <label>Customer Relationship</label>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>