force-app/main/default/objects/Customer_Relationship__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Account plan</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Account Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>