force-app/main/default/objects/Customer_Relationship__c/fields/Additional_Professional_Support__c.field-meta.xml
<CustomField>
    <fullName>Additional_Professional_Support__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Additional Professional Support</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Additional Professional Support</label>
    <type>TextArea</type>
</CustomField>