force-app/main/default/objects/Customer_Relationship__c/fields/ANZ_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Opportunities__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>ANZ Opportunities</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>ANZ Opportunities</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>