force-app/main/default/objects/Customer_Relationship__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Broker</description>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Relationships (Broker)</relationshipLabel>
    <relationshipName>Customer_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>