force-app/main/default/objects/Customer_Relationship__c/fields/Business_Investment_Background__c.field-meta.xml
<CustomField>
    <fullName>Business_Investment_Background__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Summary of the client’s business interests, investment history, and relevant professional experience.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Business/Investment Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>