force-app/main/default/objects/Customer_Relationship__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Includes professional contacts such as lawyers, accountants etc</description>
    <label>COI</label>
    <referenceTo>Circle_Of_Influence__c</referenceTo>
    <relationshipLabel>Customer Relationships (COI)</relationshipLabel>
    <relationshipName>Customer_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>