force-app/main/default/objects/Customer_Relationship__c/fields/Competitive_Landscape_and_ANZ_Relative__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Landscape_and_ANZ_Relative__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Competitive Landscape and ANZ’s Relative Strength</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Competitive Landscape and ANZ’s Relative</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>