force-app/main/default/objects/Customer_Relationship__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to customer</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Relationships</relationshipLabel>
    <relationshipName>Customer_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>