force-app/main/default/objects/Customer_Relationship__c/fields/Customer_Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Areas_of_Interest__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Specify the customer’s financial focus—e.g. deposits, lending, investments, wealth needs</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Areas of Interest</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>