force-app/main/default/objects/Customer_Relationship__c/fields/Customer_Bio__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bio__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer bio</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Bio</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>