force-app/main/default/objects/Customer_Relationship__c/fields/Customer_Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Preferences__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates the client&apos;s preferred days and times for contact, as well as their preferred communication method.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Customer Contact Preferences</label>
    <type>TextArea</type>
</CustomField>