force-app/main/default/objects/Customer_Relationship__c/fields/Customer_Groups__c.field-meta.xml
<CustomField>
    <fullName>Customer_Groups__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>This field provides ability to assign my customers to one or more customer group(s) that is best described</description>
    <label>Customer Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>ANZ Staff</fullName>
            </value>
            <value>
                <fullName>Ex-Customer</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>First Home Buyer</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Legal Professional</fullName>
            </value>
            <value>
                <fullName>Medical Professional</fullName>
            </value>
            <value>
                <fullName>Next Home Buyer</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Restructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>