force-app/main/default/objects/Customer_Relationship__c/fields/Date_Relationship_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Date_Relationship_Commenced__c</fullName>
    <complianceGroup>Integrity - Uncontrolled;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>TODAY()</defaultValue>
    <description>Date the relationship started</description>
    <label>Relationship Start Date</label>
    <type>Date</type>
</CustomField>