force-app/main/default/objects/Customer_Relationship__c/fields/Engagement_Topics__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Topics__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Captures personal interests, hobbies, and preferred conversation topics to support relationship-building and client engagement.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Engagement Topics</label>
    <type>TextArea</type>
</CustomField>