force-app/main/default/objects/Customer_Relationship__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Executive summary</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>