force-app/main/default/objects/Customer_Relationship__c/fields/Financial_Wealth_Background__c.field-meta.xml
<CustomField>
    <fullName>Financial_Wealth_Background__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Indicates the client&apos;s main source of wealth or how their net worth was accumulated</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Financial/Wealth Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>