force-app/main/default/objects/Customer_Relationship__c/fields/Indicative_FUM__c.field-meta.xml
<CustomField>
    <fullName>Indicative_FUM__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>This field gives ability to mark the indicative FUM for each and every single one of my customers</description>
    <label>Indicative FUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>