force-app/main/default/objects/Customer_Relationship__c/fields/Key_Person_1__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_1__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Person 1</description>
    <label>Key Person 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Relationships (Key Person 1)</relationshipLabel>
    <relationshipName>Customer_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>