force-app/main/default/objects/Customer_Relationship__c/fields/Key_Person_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_2__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Person 2</description>
    <label>Key Person 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Relationships (Key Person 2)</relationshipLabel>
    <relationshipName>Customer_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>