force-app/main/default/objects/Customer_Relationship__c/fields/Last_Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Attended__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Last Event Attended</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last Event Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>