force-app/main/default/objects/Customer_Relationship__c/fields/Last_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>The field gives the ability to enter the last interaction date with customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Interaction Date</label>
    <type>Date</type>
</CustomField>