force-app/main/default/objects/Customer_Relationship__c/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>This field gives ability to record the customer permission/consent to receive newsletter</description>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>