force-app/main/default/objects/Customer_Relationship__c/fields/Next_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Interaction_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The field gives ability to enter next interaction date planned with customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Interaction Date</label>
    <type>Date</type>
</CustomField>