force-app/main/default/objects/Customer_Relationship__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Freeform text</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>