force-app/main/default/objects/Customer_Relationship__c/fields/Other_Account_Plan_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Plan_Information__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Other Account Plan Information</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Account Plan Information</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>