force-app/main/default/objects/Customer_Relationship__c/fields/Other_ANZ_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Other_ANZ_Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Other ANZ Relationship</description>
    <label>Other ANZ Relationship</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>