force-app/main/default/objects/Customer_Relationship__c/fields/Other_ANZ_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Other_ANZ_Relationships__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Includes other bank contacts like other business unit bankers and executive relationships.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Includes other bank contacts like other business unit bankers and executive relationships.</inlineHelpText>
    <label>Other ANZ Relationships</label>
    <type>TextArea</type>
</CustomField>