force-app/main/default/objects/Customer_Relationship__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Other Information</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>