force-app/main/default/objects/Customer_Relationship__c/fields/Other_Key_People__c.field-meta.xml
<CustomField>
    <fullName>Other_Key_People__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>Other Key People</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other Key People</label>
    <type>TextArea</type>
</CustomField>