force-app/main/default/objects/Customer_Relationship__c/fields/Personal_Background__c.field-meta.xml
<CustomField>
    <fullName>Personal_Background__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Includes key personal context such as family structure, lifestyle preferences, and residential location</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Personal Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>