force-app/main/default/objects/Customer_Relationship__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <complianceGroup>Integrity_Uncontrolled;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer preferred name</description>
    <label>Customer&apos;s Preferred Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>