force-app/main/default/objects/Customer_Relationship__c/fields/Priorities_and_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Priorities_and_Objectives__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Priorities and Objectives</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Priorities and Objectives</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>