force-app/main/default/objects/Customer_Relationship__c/fields/Private_Banker_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Private_Banker_Advisor__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Advisor associated with this customer relationship.</description>
    <label>Private Banker Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>