force-app/main/default/objects/Customer_Relationship__c/fields/Professional_Support__c.field-meta.xml
<CustomField>
    <fullName>Professional_Support__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Professional Support - Advisor</description>
    <label>Professional Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>