force-app/main/default/objects/Customer_Relationship__c/fields/Relationship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Owner__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/User/&quot;+ OwnerId +&quot;/view/&quot;,Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Owner</label>
    <type>Text</type>
</CustomField>