force-app/main/default/objects/Customer_Relationship__c/fields/Relationship_To_Franchise__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Franchise__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Is primary / secondary relationship?</description>
    <label>Relationship to Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>