force-app/main/default/objects/Customer_Relationship__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Suburb of this customer.</description>
    <formula>Customer__r.PersonOtherCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suburb</label>
    <type>Text</type>
</CustomField>