force-app/main/default/objects/Customer_Relationship__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to territory</description>
    <label>Territory</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Territory__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>$User.User_Role__c</field>
            <operation>equals</operation>
            <value>Mobile_Lending_Franchise_Users</value>
        </filterItems>
        <filterItems>
            <field>$User.User_Role__c</field>
            <operation>notEqual</operation>
            <value>Mobile_Lending_Franchise_Users</value>
        </filterItems>
        <filterItems>
            <field>Territory__c.Status__c</field>
            <operation>equals</operation>
            <value>Active, Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Customer Relationships</relationshipLabel>
    <relationshipName>Customer_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>