force-app/main/default/objects/Customer_Relationship__c/validationRules/Last_Interaction_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Interaction_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <description>Last Interaction Date should be less than or equal to Today&apos;s date</description>
    <errorConditionFormula>AND(
 $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
 NOT($Profile.Name = &quot;System Administrator&quot;),
 Last_Interaction_Date__c &gt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>Last_Interaction_Date__c</errorDisplayField>
    <errorMessage>The Last Interaction Date must not be a future date.</errorMessage>
</ValidationRule>