force-app/main/default/objects/Customer_Relationship__c/validationRules/MLCRM_Relationship_Owner_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_Relationship_Owner_is_Mandatory</fullName>
    <active>true</active>
    <description>This validation rule is used to Prevent if Owner is Blank</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT($Profile.Name = &quot;System Administrator&quot;),
ISNULL(OwnerId)
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Relationship Owner is mandatory</errorMessage>
</ValidationRule>