force-app/main/default/objects/Customer_Relationship__c/validationRules/Next_Interaction_Date_Greater_Than_Last.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Interaction_Date_Greater_Than_Last</fullName>
    <active>true</active>
    <description>Next Interaction Date cannot be LESS THAN and EQUAL TO the Last Interaction Date</description>
    <errorConditionFormula>AND(
 $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
 NOT($Profile.Name = &quot;System Administrator&quot;),
 Next_Interaction_Date__c &lt;= Last_Interaction_Date__c
)</errorConditionFormula>
    <errorDisplayField>Next_Interaction_Date__c</errorDisplayField>
    <errorMessage>The Next Interaction Date must be greater than the Last Interaction Date.</errorMessage>
</ValidationRule>