force-app/main/default/objects/Customer_Relationship__c/validationRules/Prevent_change_of_customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_change_of_customer</fullName>
    <active>true</active>
    <description>This validation rule is used to Prevent changing of customer on existing ML relationship records</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT(ISNEW()),
ISCHANGED(Customer__c)
)</errorConditionFormula>
    <errorDisplayField>Customer__c</errorDisplayField>
    <errorMessage>Customer cannot be changed on existing relationship records</errorMessage>
</ValidationRule>