force-app/main/default/objects/Customer_Relationship__c/validationRules/Status_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is required.</errorMessage>
</ValidationRule>